* thread.c (rb_thread_run): change RDoc. The old example is buggy   and may cause deadlock. The patch is suggested by Heesob Park   <phasis@gmail.com>. Thank you! [Bug #3606][ruby-core:31454]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@32298 b2dd03c8-39d4-4d8f-98ff-823fe69b080e